syntax = "proto3";

package metadata_pb;

message SignallingMetadata {}